WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Competitors_Solution__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Payment Method is a competitor&apos;s</inlineHelpText>
    <label>Competitor&apos;s Solution</label>
    <type>Checkbox</type>
</CustomField>