WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/FEP__c.field-meta.xml
<CustomField>
    <fullName>FEP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEP</label>
    <referenceTo>Virtual_FEP__c</referenceTo>
    <relationshipLabel>Payment Method Details</relationshipLabel>
    <relationshipName>Payment_Method_Details</relationshipName>
    <type>Lookup</type>
</CustomField>