WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Hide_Report__c.field-meta.xml
<CustomField>
    <fullName>Hide_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Report</label>
    <type>Checkbox</type>
</CustomField>