WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Of_Type_s_Spend__c.field-meta.xml
<CustomField>
    <fullName>Of_Type_s_Spend__c</fullName>
    <formula>Value_Of_Spend__c / Spend_Detail__r.Value__c</formula>
    <label>% Of Type&apos;s Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>