WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BACS</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Physical Credit</fullName>
            </value>
            <value>
                <fullName>Physical Prepaid</fullName>
            </value>
            <value>
                <fullName>Virtual Credit</fullName>
            </value>
            <value>
                <fullName>Virtual Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>