WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Payment_Method_Cardable__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Cardable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Method Cardable</label>
    <type>Checkbox</type>
</CustomField>