WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Payment_Method_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>