WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Spend_Detail__c.field-meta.xml
<CustomField>
    <fullName>Spend_Detail__c</fullName>
    <label>Spend Detail</label>
    <referenceTo>Spend_Detail__c</referenceTo>
    <relationshipLabel>Payment Method Details</relationshipLabel>
    <relationshipName>Payment_Method_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>