WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type__c</fullName>
    <formula>TEXT(Spend_Detail__r.Spend_Type__c)</formula>
    <label>Spend Type</label>
    <type>Text</type>
</CustomField>