WexGit/Wex_DX/force-app/main/default/objects/Payment_Method_Detail__c/fields/Value_Of_Spend__c.field-meta.xml
<CustomField>
    <fullName>Value_Of_Spend__c</fullName>
    <label>Value Of Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>